Create component to filter and input

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -34,48 +34,6 @@
   align-items: center;
 }
 
-.homeForm {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-.homeLabel {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  margin-left: 10px;
-  color: #aa35e9;
-  font-weight: bold;
-}
-
-.homeInput {
-  text-align: center;
-  margin-top: 13px;
-  font-size: 18px;
-  border-bottom: 2px solid #aa35e9;
-  padding: 0 5px 10px 5px;
-}
-
-.homeSelectInput {
-  flex: 1;
-  margin-left: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.homeSelect {
-  margin-top: 13px;
-  background: #aa35e9;
-  padding: 7.5px 10px;
-  border-radius: 10px;
-  font-size: 18px;
-}
-
 .homeBottom {
   margin-top: 21px;
 }
@@ -108,6 +66,7 @@
   height: 250px;
   object-fit: cover;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .characterBottom {
